src/extrParser.java
// Generated from extr.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class extrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__20=1, T__19=2, T__18=3, T__17=4, T__16=5, T__15=6, T__14=7, T__13=8, 
		T__12=9, T__11=10, T__10=11, T__9=12, T__8=13, T__7=14, T__6=15, T__5=16, 
		T__4=17, T__3=18, T__2=19, T__1=20, T__0=21, JOURNAL=22, NUMERO=23, IDENTIFICADOR=24, 
		ACENTOS=25, NEWLINE=26, WS=27;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'\\%'", "'Subjects'", "':'", "'\\'", "'['", "';'", 
		"'\"\"'", "']'", "'?'", "'_'", "'\"'", "'\"'", "'%'", "'Comments:'", "'&'", 
		"'('", "')'", "','", "'-'", "'.'", "'Journal-ref'", "NUMERO", "IDENTIFICADOR", 
		"ACENTOS", "'\r\n'", "WS"
	};
	public static final int
		RULE_start = 0, RULE_documento = 1, RULE_linha1 = 2, RULE_linha2 = 3, 
		RULE_linha3 = 4, RULE_linha4 = 5, RULE_linhaJournal = 6, RULE_linha5 = 7, 
		RULE_linha6 = 8, RULE_seq = 9, RULE_l1 = 10, RULE_titulo = 11, RULE_autores = 12, 
		RULE_resumo = 13, RULE_comments = 14, RULE_subjects = 15, RULE_subAux = 16, 
		RULE_subAux2 = 17, RULE_pontuacao = 18, RULE_alfanumerico = 19;
	public static final String[] ruleNames = {
		"start", "documento", "linha1", "linha2", "linha3", "linha4", "linhaJournal", 
		"linha5", "linha6", "seq", "l1", "titulo", "autores", "resumo", "comments", 
		"subjects", "subAux", "subAux2", "pontuacao", "alfanumerico"
	};

	@Override
	public String getGrammarFileName() { return "extr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public extrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(extrParser.EOF, 0); }
		public DocumentoContext documento(int i) {
			return getRuleContext(DocumentoContext.class,i);
		}
		public List<DocumentoContext> documento() {
			return getRuleContexts(DocumentoContext.class);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40); documento();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0) );
			setState(45); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DocumentoContext extends ParserRuleContext {
		public Linha2Context linha2() {
			return getRuleContext(Linha2Context.class,0);
		}
		public Linha6Context linha6() {
			return getRuleContext(Linha6Context.class,0);
		}
		public LinhaJournalContext linhaJournal() {
			return getRuleContext(LinhaJournalContext.class,0);
		}
		public Linha1Context linha1() {
			return getRuleContext(Linha1Context.class,0);
		}
		public Linha5Context linha5() {
			return getRuleContext(Linha5Context.class,0);
		}
		public Linha4Context linha4() {
			return getRuleContext(Linha4Context.class,0);
		}
		public Linha3Context linha3() {
			return getRuleContext(Linha3Context.class,0);
		}
		public DocumentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_documento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterDocumento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitDocumento(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitDocumento(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentoContext documento() throws RecognitionException {
		DocumentoContext _localctx = new DocumentoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_documento);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47); linha1();
			setState(48); linha2();
			setState(49); linha3();
			setState(50); linha4();
			setState(51); linhaJournal();
			setState(52); linha5();
			setState(53); linha6();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha1Context extends ParserRuleContext {
		public List<L1Context> l1() {
			return getRuleContexts(L1Context.class);
		}
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public L1Context l1(int i) {
			return getRuleContext(L1Context.class,i);
		}
		public Linha1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha1Context linha1() throws RecognitionException {
		Linha1Context _localctx = new Linha1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_linha1);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(55); l1();
				}
				}
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0) );
			setState(60); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha2Context extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public TituloContext titulo(int i) {
			return getRuleContext(TituloContext.class,i);
		}
		public List<TituloContext> titulo() {
			return getRuleContexts(TituloContext.class);
		}
		public Linha2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha2Context linha2() throws RecognitionException {
		Linha2Context _localctx = new Linha2Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_linha2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62); titulo();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0) );
			setState(67); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha3Context extends ParserRuleContext {
		public List<AutoresContext> autores() {
			return getRuleContexts(AutoresContext.class);
		}
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public AutoresContext autores(int i) {
			return getRuleContext(AutoresContext.class,i);
		}
		public Linha3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha3(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha3(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha3Context linha3() throws RecognitionException {
		Linha3Context _localctx = new Linha3Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_linha3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69); autores();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0) );
			setState(74); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha4Context extends ParserRuleContext {
		public List<CommentsContext> comments() {
			return getRuleContexts(CommentsContext.class);
		}
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public CommentsContext comments(int i) {
			return getRuleContext(CommentsContext.class,i);
		}
		public Linha4Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha4; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha4(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha4(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha4(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha4Context linha4() throws RecognitionException {
		Linha4Context _localctx = new Linha4Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_linha4);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0)) {
				{
				{
				setState(76); comments();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(82); match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinhaJournalContext extends ParserRuleContext {
		public SeqContext seq(int i) {
			return getRuleContext(SeqContext.class,i);
		}
		public List<SeqContext> seq() {
			return getRuleContexts(SeqContext.class);
		}
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public LinhaJournalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linhaJournal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinhaJournal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinhaJournal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinhaJournal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinhaJournalContext linhaJournal() throws RecognitionException {
		LinhaJournalContext _localctx = new LinhaJournalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_linhaJournal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==JOURNAL) {
				{
				{
				setState(85); seq();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(91); match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha5Context extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public SubjectsContext subjects() {
			return getRuleContext(SubjectsContext.class,0);
		}
		public Linha5Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha5; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha5(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha5(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha5(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha5Context linha5() throws RecognitionException {
		Linha5Context _localctx = new Linha5Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_linha5);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); subjects();
			setState(95); match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Linha6Context extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(extrParser.NEWLINE, 0); }
		public List<ResumoContext> resumo() {
			return getRuleContexts(ResumoContext.class);
		}
		public ResumoContext resumo(int i) {
			return getRuleContext(ResumoContext.class,i);
		}
		public Linha6Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linha6; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterLinha6(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitLinha6(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitLinha6(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Linha6Context linha6() throws RecognitionException {
		Linha6Context _localctx = new Linha6Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_linha6);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(97); resumo();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(100); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(103);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(102); match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeqContext extends ParserRuleContext {
		public TerminalNode JOURNAL() { return getToken(extrParser.JOURNAL, 0); }
		public List<L1Context> l1() {
			return getRuleContexts(L1Context.class);
		}
		public PontuacaoContext pontuacao() {
			return getRuleContext(PontuacaoContext.class,0);
		}
		public L1Context l1(int i) {
			return getRuleContext(L1Context.class,i);
		}
		public SeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitSeq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitSeq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeqContext seq() throws RecognitionException {
		SeqContext _localctx = new SeqContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_seq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105); match(JOURNAL);
			setState(106); pontuacao();
			setState(108); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107); l1();
				}
				}
				setState(110); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__19) | (1L << T__17) | (1L << T__16) | (1L << T__15) | (1L << T__14) | (1L << T__13) | (1L << T__12) | (1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << T__0) | (1L << NUMERO) | (1L << IDENTIFICADOR) | (1L << ACENTOS))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class L1Context extends ParserRuleContext {
		public AlfanumericoContext alfanumerico() {
			return getRuleContext(AlfanumericoContext.class,0);
		}
		public PontuacaoContext pontuacao() {
			return getRuleContext(PontuacaoContext.class,0);
		}
		public L1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_l1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterL1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitL1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitL1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final L1Context l1() throws RecognitionException {
		L1Context _localctx = new L1Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_l1);
		try {
			setState(114);
			switch (_input.LA(1)) {
			case NUMERO:
			case IDENTIFICADOR:
			case ACENTOS:
				enterOuterAlt(_localctx, 1);
				{
				setState(112); alfanumerico();
				}
				break;
			case T__20:
			case T__19:
			case T__17:
			case T__16:
			case T__15:
			case T__14:
			case T__13:
			case T__12:
			case T__11:
			case T__10:
			case T__9:
			case T__8:
			case T__7:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(113); pontuacao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TituloContext extends ParserRuleContext {
		public AlfanumericoContext alfanumerico() {
			return getRuleContext(AlfanumericoContext.class,0);
		}
		public PontuacaoContext pontuacao() {
			return getRuleContext(PontuacaoContext.class,0);
		}
		public TituloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_titulo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterTitulo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitTitulo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitTitulo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TituloContext titulo() throws RecognitionException {
		TituloContext _localctx = new TituloContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_titulo);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case NUMERO:
			case IDENTIFICADOR:
			case ACENTOS:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); alfanumerico();
				}
				break;
			case T__20:
			case T__19:
			case T__17:
			case T__16:
			case T__15:
			case T__14:
			case T__13:
			case T__12:
			case T__11:
			case T__10:
			case T__9:
			case T__8:
			case T__7:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(117); pontuacao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AutoresContext extends ParserRuleContext {
		public AlfanumericoContext alfanumerico() {
			return getRuleContext(AlfanumericoContext.class,0);
		}
		public PontuacaoContext pontuacao() {
			return getRuleContext(PontuacaoContext.class,0);
		}
		public AutoresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_autores; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterAutores(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitAutores(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitAutores(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AutoresContext autores() throws RecognitionException {
		AutoresContext _localctx = new AutoresContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_autores);
		try {
			setState(122);
			switch (_input.LA(1)) {
			case NUMERO:
			case IDENTIFICADOR:
			case ACENTOS:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); alfanumerico();
				}
				break;
			case T__20:
			case T__19:
			case T__17:
			case T__16:
			case T__15:
			case T__14:
			case T__13:
			case T__12:
			case T__11:
			case T__10:
			case T__9:
			case T__8:
			case T__7:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); pontuacao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResumoContext extends ParserRuleContext {
		public AlfanumericoContext alfanumerico() {
			return getRuleContext(AlfanumericoContext.class,0);
		}
		public PontuacaoContext pontuacao() {
			return getRuleContext(PontuacaoContext.class,0);
		}
		public ResumoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_resumo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).enterResumo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof extrListener ) ((extrListener)listener).exitResumo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof extrVisitor ) return ((extrVisitor<? extends T>)visitor).visitResumo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResumoContext resumo() throws RecognitionException {
		ResumoContext _localctx = new ResumoContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_resumo);
		try {
			setState(126);
			switch (_input.LA(1)) {
			case NUMERO:
			case IDENTIFICADOR:
			case ACENTOS:
				enterOuterAlt(_localctx, 1);
				{
				setState(124); alfanumerico();
				}
				break;
			case T__20:
			case T__19:
			case T__17:
			case T__16:
			case T__15:
			case T__14:
			case T__13:
			case T__12:
			case T__11:
			case T__10:
			case T__9:
			case T__8:
			case T__7:
			case T__5:
			case T__4:
			case T__3:
			case T__2:
			case T__1:
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(125); pontuacao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
